Made a test (and a lot of TODOs) that documents that with the current sequence of creating deliveries, we can push the endpoint stuff all the way out to the mapper in OnboardServer, and things will still work. A step towards more immutability